Fix styles and wrapping

--- a/src/styles/components/Cards.module.css
+++ b/src/styles/components/Cards.module.css
@@ -60,9 +60,6 @@
 .TrailerModal {
   width: 100%;
   height: 100%;
-  padding: 20px;
-  display: grid;
-  place-items: center;
   position: fixed;
   top: 0;
   left: 0;
@@ -71,23 +68,39 @@
   background: rgba(57, 62, 70, 0.9);
   backdrop-filter: blur(4px);
 }
-.TrailerModal div {
+.TrailerModal section{
+  width: 90%;
+  height: 100%;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+}
+.TrailerCard section div:nth-child(1) {
+  width: 100%;
+  height: 100%;
+  padding: 20px;
+  display: flex;
+  justify-content: flex-end;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.TrailerCard section div svg{
+  fill: var(--C1);
+  z-index: 2;
+}
+.TrailerModal section div:nth-child(2) {
   width: 100%;
   height: 0;
-  padding-bottom: 56.25%;
-  padding-top: 30px;
   position: relative;
-  overflow: hidden;
-
-  border-radius: var(--BR-3);
-  box-shadow: var(--SHADOW);
+  padding-bottom: 56.25%; 
 }
-.TrailerModal iframe {
+.TrailerModal section iframe {
   width: 100%;
   height: 100%;
   position: absolute;
+  top:0;
   left: 0;
-  top: 0;
 }
 
 .ArtistCard {
